app/assets/css/tailwind.css
@import "tailwindcss";

@theme {
  --font-bebas: "League Gothic", "sans-serif";
  --font-lekton: "Lekton", "sans-serif";
  --font-ubuntu: "Ubuntu", "sans-serif";
  --font-cascadia: "Cascadia Code", "sans-serif";
  
  --breakpoint-xs: 30rem;

  --max-w-90: calc(var(--spacing) * 120);
  --max-w-100: calc(var(--spacing) * 120);
  --max-w-110: calc(var(--spacing) * 120);
  --max-w-120: calc(var(--spacing) * 120);
  --max-w-128: calc(var(--spacing) * 120);

  --color-pink-50: #fff0f3;
  --color-pink-100: #ffe4ea;
  --color-pink-200: #ffc9d6;
  --color-pink-300: #ffadc2;
  --color-pink-400: #ff89ab;
  --color-pink-500: #ff6798;
  --color-pink-600: #ed0074;
  --color-pink-700: #b60058;
  --color-pink-800: #7e003b;
  --color-pink-900: #4a0020;
  --color-pink-950: #300012;
  
  --color-white: #e6e6e6;

  --color-grey-50: #f0f0f4;
  --color-grey-100: #e4e5ec;
  --color-grey-200: #c9cbd9;
  --color-grey-300: #aeb2c7;
  --color-grey-400: #949ab5;
  --color-grey-500: #7b82a3;
  --color-grey-600: #646c8c;
  --color-grey-700: #505671;
  --color-grey-800: #3c4156;
  --color-grey-900: #282b3b;
  --color-grey-950: #202330;

  --color-primary: var(--color-pink-600);
  --color-bg: var(--color-white);
  --color-fg: var(--color-grey-950);
  --color-fg-muted: #a6a6a6;
}

@source inline("object-{top,center,bottom,left,right}");
@source inline("object-{top,bottom}-{left,right}");

a {
  @apply underline text-primary hover:bg-primary hover:text-bg font-medium;
}

ul {
  @apply ml-8 list-outside list-disc;
}

ol {
  @apply ml-8 list-outside list-decimal;
}

.btn {
  @apply no-underline outline outline-1 px-2 text-primary hover:bg-primary hover:text-bg font-medium;
}

.highlight-text {
  @apply inline font-bold bg-primary p-1 text-bg box-decoration-clone;
}

.primary-text {
  @apply text-primary;
}

.bg-stripes {
  background: repeating-linear-gradient(
    -45deg,
    theme(colors.grey.300),
    theme(colors.grey.300) 16px,
    theme(colors.grey.200) 16px,
    theme(colors.grey.200) 32px
  );
}

